@@ -92,7 +92,7 @@ TORONTO VENTURE		TOR	BARCHART
 MILAN EXCHANGE		MIL	not available yet
 SWISS EXCHANGE		XSWX	SWX
 SWISS EXCHANGE		XVTX	SWX
-IRISH EXCHANGE          DUB	not available yet
+IRISH EXCHANGE          DUB	IRISH STOCK EXCHANGE (www.ise.ie)
 MADRID EXCHANGE		MAD	not available yet
 
 ===============================================================================
