@@ -1,20 +1,15 @@
 IE0000020408;ABBEY PLC - IEX;DOY;IRISH EXCHANGE;EUR;DUB;IE
 IE00B1CMPN86;AER LINGUS GROUP PLC;EIL1;IRISH EXCHANGE;EUR;DUB;IE
 IE00B0YT0Q82;AGI THERAPEUTICS PLC - IEX;A9I;IRISH EXCHANGE;EUR;DUB;IE
-IE0002778375;ALLIED IRISH BANKS PLC;DDZB;IRISH EXCHANGE;EUR;DUB;IE
 IE0000197834;ALLIED IRISH BANKS PLC;AIB;IRISH EXCHANGE;EUR;DUB;IE
 GB0000436740;AMARIN CORPORATION PLC - IEX;H2E;IRISH EXCHANGE;EUR;DUB;IE
 IE0003073255;AMINEX PLC;DOP;IRISH EXCHANGE;EUR;DUB;IE
 GB00B043J741;ANDOR TECHNOLOGY PLC - IEX;DWL;IRISH EXCHANGE;EUR;DUB;IE
 IE00B06H8J93;ANGLO IRISH BANK CORPORATION PLC;CKL1;IRISH EXCHANGE;EUR;DUB;IE
-IE0000730808;BANK OF IRELAND;DD7D;IRISH EXCHANGE;EUR;DUB;IE
-IE0000730790;BANK OF IRELAND;DD7E;IRISH EXCHANGE;EUR;DUB;IE
 IE0030606259;BANK OF IRELAND;BIR;IRISH EXCHANGE;EUR;DUB;IE
 IE00B134XK63;BLACKROCK INTERNATIONAL LAND PLC - IEX;B8L;IRISH EXCHANGE;EUR;DUB;IE
 IE00B1W7FK04;BOUNDARY CAPITAL PLC - IEX;BCM;IRISH EXCHANGE;EUR;DUB;IE
-IE0001827603;C R H PLC;DD8B;IRISH EXCHANGE;EUR;DUB;IE
 IE0001827041;C R H PLC;CRG;IRISH EXCHANGE;EUR;DUB;IE
-IE0001827264;C R H PLC;DD8A;IRISH EXCHANGE;EUR;DUB;IE
 IE00B010DT83;C&C GROUP PLC;GCC;IRISH EXCHANGE;EUR;DUB;IE
 IE0007214426;CPL RESOURCES PLC - IEX;DQ5;IRISH EXCHANGE;EUR;DUB;IE
 IE0000527006;DATALEX PLC;DLE;IRISH EXCHANGE;EUR;DUB;IE
@@ -31,7 +26,6 @@ GB0006152002;GARTMORE IRISH GROWTH FUND PLC;DMU;IRISH EXCHANGE;EUR;DUB;IE
 GB00B01D7L74;GETMOBILE EUROPE PLC - IEX;GZQ;IRISH EXCHANGE;EUR;DUB;IE
 IE0000669501;GLANBIA PLC;GL9;IRISH EXCHANGE;EUR;DUB;IE
 IE0003725383;GLENCAR MINING PLC - IEX;GN2;IRISH EXCHANGE;EUR;DUB;IE
-IE00B00MZ448;GRAFTON GROUP.PLC;GN5;IRISH EXCHANGE;EUR;DUB;IE
 IE0003864109;GREENCORE GROUP PLC;GCG;IRISH EXCHANGE;EUR;DUB;IE
 IE0006881506;HORIZON TECHNOLOGY GROUP PLC;HV6;IRISH EXCHANGE;EUR;DUB;IE
 IE0004554287;IAWS GROUP PLC;IW4;IRISH EXCHANGE;EUR;DUB;IE
@@ -39,16 +33,13 @@ IE0005711209;ICON PLC;IJF;IRISH EXCHANGE;EUR;DUB;IE
 IE0002325243;IFG GROUP PLC;IJG;IRISH EXCHANGE;EUR;DUB;IE
 IE0004614818;INDEPENDENT NEWS & MEDIA PLC;IPD;IRISH EXCHANGE;EUR;DUB;IE
 IE0002261851;IONA TECHNOLOGIES PLC;IOP;IRISH EXCHANGE;EUR;DUB;IE
-IE0033336516;IRISH CONTINENTAL GROUP PLC;IR5A;IRISH EXCHANGE;EUR;DUB;IE
 IE0004678656;IRISH LIFE AND PERMANENT PLC;ILB;IRISH EXCHANGE;EUR;DUB;IE
-IE00B03TF647;ISEQ EXCHANGE TRADED FUND PLC;IETF;IRISH EXCHANGE;EUR;DUB;IE
 IE0004879486;KENMARE RESOURCES PLC;JEV;IRISH EXCHANGE;EUR;DUB;IE
-IE00B01GTM11;KENMARE RESOURCES PLC;JEV1;IRISH EXCHANGE;EUR;DUB;IE
 IE0004906560;KERRY GROUP PLC;KRZ;IRISH EXCHANGE;EUR;DUB;IE
 IE0004927939;KINGSPAN GROUP PLC;KRX;IRISH EXCHANGE;EUR;DUB;IE
 GB0034353531;LAPP PLATS PLC - IEX;LPC;IRISH EXCHANGE;EUR;DUB;IE
 IE00B1W38B04;MCINERNEY. HOLDINGS PLC;MK9C;IRISH EXCHANGE;EUR;DUB;IE
-IE0001581036;MOSNEY IRISH HOLIDAYS PLC;MY7A;IRISH EXCHANGE;EUR;DUB;IE
+IE00B282VY28;MERRION PHARMACEUTICALS PLC - IEX;3MP;IRISH EXCHANGE;EUR;DUB;IE
 IE00B0LNHG27;NEWCOURT GROUP PLC - IEX;N6G;IRISH EXCHANGE;EUR;DUB;IE
 IE00B16PV578;NORKOM GROUP PLC - IEX;N5OK;IRISH EXCHANGE;EUR;DUB;IE
 IE0006575363;OGLESBY & BUTLER PLC;OGQ;IRISH EXCHANGE;EUR;DUB;IE
@@ -63,7 +54,6 @@ IE0001390784;PROVIDENCE RESOURCES PLC - IEX;PZQ;IRISH EXCHANGE;EUR;DUB;IE
 IE0007172707;QUALCERAM SHIRES PLC;QPN;IRISH EXCHANGE;EUR;DUB;IE
 IE0007267820;READYMIX PLC;RH1;IRISH EXCHANGE;EUR;DUB;IE
 GB0030364995;REAL ESTATE OPPORTUNITIES LTD;REA;IRISH EXCHANGE;EUR;DUB;IE
-GB0030365075;REAL ESTATE OPPORTUNITIES LTD (PREF);REAP;IRISH EXCHANGE;EUR;DUB;IE
 IE00B1GKF381;RYANAIR HOLDINGS. PLC;RY4B;IRISH EXCHANGE;EUR;DUB;IE
 IE00B1FWGK93;SITESERV PLC - IEX;STV;IRISH EXCHANGE;EUR;DUB;IE
 IE00B1RR8406;SMURFIT KAPPA GROUP PLC;SK3;IRISH EXCHANGE;EUR;DUB;IE
@@ -76,5 +66,4 @@ IE0033024807;UNITED DRUG PLC;UN6A;IRISH EXCHANGE;EUR;DUB;IE
 GB00B244WQ16;UTV MEDIA PLC;MDY;IRISH EXCHANGE;EUR;DUB;IE
 IE00B0JT3T79;VERIS PLC - IEX;IRS;IRISH EXCHANGE;EUR;DUB;IE
 GB0001482891;VISLINK PLC;VSF;IRISH EXCHANGE;EUR;DUB;IE
-IE0009420385;WATERFORD WEDGWOOD PLC;WWW;IRISH EXCHANGE;EUR;DUB;IE
 IE00B1G17W46;ZAMANO PLC - IEX;ZAZ;IRISH EXCHANGE;EUR;DUB;IE
